--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -3,12 +3,10 @@
 @import './global/footer';
 @import './global/responsive';
 
-$img_link : url("../assests/images/img2.jpeg");
-
 
 //? CONTACT HEADER AREA STYLING start -------------------------------
 header {
-    @include make_header($img_link);
+    @include make_header();
 
     .hero_text_container {
         display: flex;
